collage final project

--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.9",
     "aos": "^2.3.4",
+    "axios": "^1.7.9",
     "firebase": "^11.0.2",
+    "flowbite-react": "^0.10.2",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
+    "react-super-responsive-table": "^6.0.0",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.14"
   },
